--- a/css/sections/burger.css
+++ b/css/sections/burger.css
@@ -87,3 +87,12 @@ body {
   top: 140px;
   z-index: -50;
 }
+.Popcorn {
+  z-index: 100;
+  width: 870px;
+  height: 550px;
+  position: absolute;
+  bottom: -50px;
+  right: -450px;
+  transform: rotate(-10deg);
+}
